# LlamaEdge-Nexus

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test_server.yml
src/: error.rs  handler.rs  main.rs  rag.rs  server.rs  utils.rs
tests/: test_chat.hurl  test_embeddings.hurl  test_whisper.hurl
