[package]
name    = "llama-proxy-server"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "^0.6", features = ["multipart"] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }
async-trait = "0.1.82"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.9.0"
uuid = { version = "1.7.0", features = ["v4"] }
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
chat-prompts = { version = "0.25.0", git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "refactor-update-serverinfo" }
endpoints = { version = "0.25.1", features = [
    "whisper",
    "rag",
], git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "refactor-update-serverinfo" }
qdrant = { package = "qdrant_rest_client", version = "0.2.1" }
text-splitter = { version = "^0.24", features = ["tiktoken-rs", "markdown"] }
tokio-util = "0.7.13"
config = { version = "^0.15", features = ["toml"] }

[patch.crates-io]
tokio   = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper   = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
