[package]
name        = "LlamaEdge-Nexus"
version     = "0.2.0"
edition     = "2021"
description = "LlamaEdge-Nexus is a gateway service for LLM backends"
license     = "Apache-2.0"
repository  = "https://github.com/LlamaEdge/LlamaEdge-Nexus"

[dependencies]
anyhow = "1"
async-trait = "0.1.82"
axum = { version = "^0.6", features = ["multipart"] }
bitflags = "2.9.0"
bytes = "1"
chat-prompts = { version = "0.25.0", git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "refactor-update-serverinfo" }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
config = { version = "^0.15", features = ["toml"] }
endpoints = { version = "0.25.1", features = [
    "whisper",
    "rag",
], git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "refactor-update-serverinfo" }
futures-util = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
once_cell = "1.18"
qdrant = { package = "qdrant_rest_client", version = "0.2.1" }
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-splitter = { version = "^0.24", features = ["tiktoken-rs", "markdown"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
tokio-util = "0.7.13"
tower-http = { version = "0.4", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[patch.crates-io]
tokio   = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper   = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[[bin]]
name = "llama-nexus"
path = "src/main.rs"
